Fix homepage design on mobile websites

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -12,7 +12,6 @@
 
 .jumbotron {
   background: white image-url("header-image-1.jpg") no-repeat center center;
-  height: 60vh;
 }
 
 .jumbotron p {
@@ -23,7 +22,6 @@
 .jumbotron-text {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
-  margin-top: 5vh;
 }
 
 label {
